--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,6 +10,6 @@ description: > # this means to ignore newlines until "baseurl:"
 # social links
 github_username: LukJA
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
 url: "https://lukja.github.io/" # the base hostname & protocol for your site
 baseurl: "/NoTeX-Concept"
